[package]
name = "waitfor"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/waitfor"
repository = "https://github.com/d-e-s-o/waitfor.git"
readme = "README.md"
categories = ["asynchronous", "concurrency", "date-and-time", "development-tools::testing"]
keywords = ["wait-for", "wait", "retry", "poll", "timeout"]
description = """
Retry a function until it succeeds, errors out, or a timeout/deadline is reached.
"""

[dependencies]
